Branch smoothing on skin modifier broken in Blender DEV 2.69 + #38567

Closed
opened 2014-02-10 07:21:06 +01:00 by J Kauth · 8 comments

System Information
Mac OS Mavericks 10.9.1
MacBookAir 11"

Blender Version

Broken:
Broken in git commit 311883fc3b
and at least for a couple of days earlier but I don't know how far back.

Worked: (optional)

Blender 2.69 release worked.

Short description of error

Branch smoothing in a skin modifier is broken. Any value other than
"0.00" for smoothing makes all the skinned geometry disappear, or
shrink to zero width. Nothing shows up in the render or the
viewport when you move the branch smoothing slider beyond 0.

Exact steps for others to reproduce the error

Create a mesh object consisting only of an edge.

Add a Skin modifier. Your skinned geometry will
be a box.

Slide the branch smoothing slider of the SKin modifier
to a value greater than zero.

Observe the viewport as you slide the value. The box
will collapse to nothing and disappear in your viewer.

**System Information** Mac OS Mavericks 10.9.1 MacBookAir 11" **Blender Version** Broken: Broken in git commit 311883fc3b397ccd40a88dc48da3bc094b3a093a and at least for a couple of days earlier but I don't know how far back. Worked: (optional) Blender 2.69 release worked. **Short description of error** Branch smoothing in a skin modifier is broken. Any value other than "0.00" for smoothing makes all the skinned geometry disappear, or shrink to zero width. Nothing shows up in the render or the viewport when you move the branch smoothing slider beyond 0. **Exact steps for others to reproduce the error** Create a mesh object consisting only of an edge. Add a Skin modifier. Your skinned geometry will be a box. Slide the branch smoothing slider of the SKin modifier to a value greater than zero. Observe the viewport as you slide the value. The box will collapse to nothing and disappear in your viewer.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jakester488

Added subscriber: @jakester488

Added subscriber: @brecht

Added subscriber: @brecht

This was broken by commit {7df8452d1a7edbb920e184435d73d90f3df3e3ac}.

This was broken by commit {7df8452d1a7edbb920e184435d73d90f3df3e3ac}.
Campbell Barton was assigned by Brecht Van Lommel 2014-02-10 16:54:19 +01:00

This issue was referenced by blender/blender-addons-contrib@c625658a92

This issue was referenced by blender/blender-addons-contrib@c625658a92b9aa67aa41fa7529978d675dd40c20

This issue was referenced by c625658a92

This issue was referenced by c625658a92b9aa67aa41fa7529978d675dd40c20

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c625658a92.

Closed by commit c625658a92.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38567
No description provided.