Fix T38567: Branch smoothing on skin modifier broken

own regression when changing delete commands